--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- Navigation -->
         <nav class="bg_grad_1 navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container col-12 col-md-11">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.svg"> Dokey</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.svg"></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -137,18 +137,18 @@
 
 
     <!-- How it works  mobile-->
-    <section class="hiw" data-aos="fade-in" >
+    <section class="hiw" id="hiw" data-aos="fade-in" >
         <!-- Artist -->
         <div class="container hiw-artist" id="hiw-artist">
             <div class="section-heading text-center">
-                <h4>How it works</h4>
+                <h3>How it works</h3>
                 <p>for artists</p>
                 <hr>
             </div>
             <div class="row p-2 d-flex flex-column flex-lg-row justify-content-center">
                 <div class="hiw-step hiw-shape-1 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto" src="img/icon-upload.svg">
-                    <p class="pt-2 pb-1 mb-auto">Publich your art on Bimble</p>
+                    <p class="pt-2 pb-1 mb-auto">Publish your art on Bimble</p>
                 </div>
                 <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-4 mt-auto" src="img/icon-email.svg">
@@ -192,7 +192,7 @@
                 <img class="img-fluid pull-left title-underlying" src="img/gallery-title-underline.svg">
             </div>
             <div class="col-md-6 text-right d-none d-md-block">
-                <a href="#"
+                <a href="#contact"
                    class="btn-upload-art mt-5 mr-5 btn btn-accent btn-shadow btn-icon btn-xl
                js-scroll-trigger d-inline">Upload
                     your art</a>
@@ -255,22 +255,31 @@
         </div>
 
         <div class="d-md-none row justify-content-center p-3">
-            <a href="#"
+            <a href="#contact"
                class="btn-upload-art mt-5 btn btn-accent btn-shadow btn-icon btn-xl
                js-scroll-trigger col-auto">Upload
                 your art</a>
         </div>
 
     </section>
-<!--
+
     <section class="faq" id="faq">
+
         <div class="faq-title row ml-3 mb-5">
             <div class="col-md-6 align-bottom">
                 <h1>FAQ</h1>
                 <img class="img-fluid pull-left title-underlying" src="img/faq-title-underline.svg">
             </div>
         </div>
-    </section>-->
+
+        <div class="container-fluid pl-5 pr-5">
+            <h3>Come funziona?</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+
+            <h3>E come ci guadagnate?</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        </div>
+    </section>
 
     <section class="team" id="team">
         <div class="team-title row ml-3 mb-5">
