Change section titles

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                             <a class="nav-link js-scroll-trigger text-center" href="#gallery">Gallery</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link js-scroll-trigger text-center" href="#faq">FAQ</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link js-scroll-trigger text-center" href="#contact">Contacts</a>
                         </li>
                     </ul>
@@ -136,28 +139,30 @@
     </header>
 
 
-    <!-- How it works  mobile-->
+    <!-- How it works -->
     <section class="hiw" data-aos="fade-in" >
         <!-- Artist -->
         <div class="container hiw-artist" id="hiw-artist">
-            <div class="section-heading text-center">
-                <h4>How it works</h4>
-                <p>for artists</p>
+            <div class="section-heading text-center mb-5">
+                <h2>How it works</h2>
+                <h4>for artists</h4>
                 <hr>
             </div>
             <div class="row p-2 d-flex flex-column flex-lg-row justify-content-center">
                 <div class="hiw-step hiw-shape-1 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto" src="img/icon-upload.svg">
-                    <h1>Upload Art</h1>
-                    <p class="pt-2 pb-1 mb-auto">Publich your art on Bimble</p>
+                    <h4 class="pt-2">Upload Art</h4>
+                    <p class="pt-2 pb-1 mb-auto">Publish your art on Bimble</p>
                 </div>
                 <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
-                    <img class="col-4 mt-auto" src="img/icon-email.svg">
+                    <img class="col-5 mt-auto" src="img/icon-email.svg">
+                    <h4 class="pt-2">Find Empty Walls</h4>
                     <p class="pt-2 pb-1 mb-auto">Shops will contact you</p>
                 </div>
                 <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto ml-2 pl-lg-4 pr-lg-1" src="img/icon-sell.svg">
-                    <p class="pt-2 pb-1 pl-lg-3 mb-auto">Interested clients will buy your art</p>
+                    <h4 class="pt-2">Sell Art</h4>
+                    <p class="pt-2 pb-1 pl-lg-3 mb-auto">Clients will buy your art</p>
                 </div>
             </div>
         </div>
@@ -165,8 +170,8 @@
         <!-- Business -->
         <div class="container hiw-business d-none" id="#hiw-business">
             <div class="section-heading text-center">
-                <h4>How it works</h4>
-                <p>for business</p>
+                <h2>How it works</h2>
+                <h4>for business</h4>
                 <hr>
             </div>
             <div class="row p-2">
@@ -187,23 +192,15 @@
     </section>
 
     <section class="gallery" id="gallery"  data-aos="fade-in">
-        <div class="section-heading text-center">
-            <h4>Gallery</h4>
+        <div class="section-heading text-center mb-5">
+            <h2>Gallery</h2>
             <hr>
         </div>
-        <div class="gallery-title row ml-3 mb-5 align-items-center">
-            <div class="col-md-6 align-bottom">
-                <h1>Gallery</h1>
-                <img class="img-fluid pull-left title-underlying" src="img/gallery-title-underline.svg">
-            </div>
-            <div class="col-md-6 text-right d-none d-md-block">
-                <a href="#"
-                   class="btn-upload-art mt-5 mr-5 btn btn-accent btn-shadow btn-icon btn-xl
-               js-scroll-trigger d-inline">Upload
-                    your art</a>
-            </div>
 
-        </div>
+        <!--
+        <a href="#"
+           class="float-right d-none d-md-block d-inline btn-upload-art btn btn-accent btn-shadow btn-icon btn-xl js-scroll-trigger">Upload your art</a>
+        -->
 
         <div class="gallery-container d-flex flex-row flex-wrap justify-content-center">
             <div class="d-flex flex-column">
@@ -267,22 +264,17 @@
         </div>
 
     </section>
-<!--
     <section class="faq" id="faq">
-        <div class="faq-title row ml-3 mb-5">
-            <div class="col-md-6 align-bottom">
-                <h1>FAQ</h1>
-                <img class="img-fluid pull-left title-underlying" src="img/faq-title-underline.svg">
-            </div>
+        <div class="section-heading text-center mb-5">
+            <h2>FAQ</h2>
+            <hr>
         </div>
-    </section>-->
+    </section>
 
     <section class="team" id="team">
-        <div class="team-title row ml-3 mb-5">
-            <div class="col-md-6 align-bottom">
-                <h1>Team</h1>
-                <img class="img-fluid pull-left title-underlying" src="img/team-title-underline.svg">
-            </div>
+        <div class="section-heading text-center mb-5">
+            <h2>Team</h2>
+            <hr>
         </div>
 
         <div class="d-flex flex-column flex-lg-row align-items-center">
