Fix upload art btn

--- a/index.html
+++ b/index.html
@@ -193,14 +193,15 @@
 
     <section class="gallery" id="gallery"  data-aos="fade-in">
         <div class="section-heading text-center mb-5">
+            <a href="#"
+               class="d-none d-lg-block mr-5
+               btn-upload-art-float btn btn-accent btn-shadow btn-icon btn-xl js-scroll-trigger">Upload your art</a>
             <h2>Gallery</h2>
             <hr>
         </div>
 
-        <!--
-        <a href="#"
-           class="float-right d-none d-md-block d-inline btn-upload-art btn btn-accent btn-shadow btn-icon btn-xl js-scroll-trigger">Upload your art</a>
-        -->
+
+
 
         <div class="gallery-container d-flex flex-row flex-wrap justify-content-center">
             <div class="d-flex flex-column">
@@ -256,9 +257,9 @@
             </div>
         </div>
 
-        <div class="d-md-none row justify-content-center p-3">
+        <div class="d-lg-none row justify-content-center p-3">
             <a href="#"
-               class="btn-upload-art mt-5 btn btn-accent btn-shadow btn-icon btn-xl
+               class="mt-5 btn btn-accent btn-shadow btn-icon btn-xl
                js-scroll-trigger col-auto">Upload
                 your art</a>
         </div>
