Fix email icon spacing and comment out FAQ section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <p class="pt-2 pb-1 mb-auto">Publish your art on Bimble</p>
                 </div>
                 <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
-                    <img class="col-5 mt-auto" src="img/icon-email.svg">
+                    <img class="col-lg-5 col-sm-4 mt-auto" src="img/icon-email.svg">
                     <h4 class="pt-2">Find Empty Walls</h4>
                     <p class="pt-2 pb-1 mb-auto">Shops will contact you</p>
                 </div>
@@ -265,12 +265,13 @@
         </div>
 
     </section>
+    <!--
     <section class="faq" id="faq">
         <div class="section-heading text-center mb-5">
             <h2>FAQ</h2>
             <hr>
         </div>
-    </section>
+    </section>-->
 
     <section class="team" id="team">
         <div class="section-heading text-center mb-5">
