--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!-- Navigation -->
         <nav class="bg_grad_1 navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container col-12 col-md-11">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.svg"> Dokey</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logo.svg"> Bimble</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                         aria-label="Toggle navigation">
