--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                 <span class="mt-3"></span>
                 <h2 class="mt-3 col-md-8 col-10">Get started as:</h2>
                 <div class="flex-row flex-sm-column">
-                    <a id="btn-artist" href="#hiw" class="col-sm-12 col-md-4 mt-4 mr-md-2 btn btn-accent btn-icon-artist btn-shadow btn-icon btn-xl js-scroll-trigger">ARTIST</a>
-                    <a id="btn-business" href="#hiw" class="col-sm-12 col-md-4 mt-4 btn btn-accent-2 btn-icon-business btn-shadow btn-xl js-scroll-trigger">BUSINESS</a>
+                    <a id="btn-artist" href="#hiw-artist" class="col-sm-12 col-md-4 mt-4 mr-md-2 btn btn-accent btn-icon-artist btn-shadow btn-icon btn-xl js-scroll-trigger">ARTIST</a>
+                    <a id="btn-business" href="#hiw-business" class="col-sm-12 col-md-4 mt-4 btn btn-accent-2 btn-icon-business btn-shadow btn-xl js-scroll-trigger">BUSINESS</a>
                 </div>
             </div>
         </div>
@@ -159,23 +159,26 @@
         </div>
 
         <!-- Business -->
-        <div class="container hiw-business d-none" id="#hiw-business">
+        <div class="container hiw-business d-none" id="hiw-business">
             <div class="section-heading text-center">
                 <h2>How it works</h2>
                 <h4>for business</h4>
                 <hr>
             </div>
-            <div class="row p-2">
-                <div class="hiw-step hiw-shape-1 col-12 d-flex flex-column align-items-center text-center">
+            <div class="row p-2 d-flex flex-column flex-lg-row justify-content-cente">
+                <div class="hiw-step hiw-shape-1 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto" src="img/icon-search.svg">
+                    <h4 class="pt-2">Discover</h4>
                     <p class="pt-2 pb-1 mb-auto">Search for art</p>
                 </div>
-                <div class="hiw-step hiw-shape-2 col-12 d-flex flex-column align-items-center text-center">
-                    <img class="col-4 mt-auto" src="img/icon-email.svg">
+                <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
+                    <img class="col-5 mt-auto" src="img/icon-email.svg">
+                    <h4 class="pt-2">Connect</h4>
                     <p class="pt-2 pb-1 mb-auto">Contact the artist</p>
                 </div>
-                <div class="hiw-step hiw-shape-3 col-12 d-flex flex-column align-items-center text-center">
+                <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto ml-2" src="img/icon-business.svg">
+                    <h4 class="pt-2">Show</h4>
                     <p class="pt-2 pb-1 mb-auto">Exhibit art in your business for free</p>
                 </div>
             </div>
