--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     <p class="pt-2 pb-1 mb-auto">Publish your art on Bimble</p>
                 </div>
                 <div class="hiw-step hiw-shape-2 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
-                    <img class="col-5 mt-auto" src="img/icon-email.svg">
+                    <img class="col-5 mt-auto" src="img/icon-business-blue.svg">
                     <h4 class="pt-2">Find Empty Walls</h4>
                     <p class="pt-2 pb-1 mb-auto">Shops will contact you</p>
                 </div>
@@ -286,11 +286,6 @@
                      data-width="1280" data-height="1600"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/a035edd3af903a8d903cc7cb252801ba.jpg"
-                     alt="Francesca Albano" data-highres="img/paintings/a035edd3af903a8d903cc7cb252801ba.jpg"
-                     data-width="1200" data-height="1600"
-                     onclick="openPainting(this);"
-                />
                 <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/66cbdc42a2c67582f02028c9898039ef.jpg"
                      alt="Francesca Albano" data-highres="img/paintings/66cbdc42a2c67582f02028c9898039ef.jpg"
                      data-width="717" data-height="892"
@@ -313,13 +308,6 @@
                 <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/57368515fb9b2566760950dbc546dfcb.jpg"
                      alt="Lucia Loza" data-highres="img/paintings/57368515fb9b2566760950dbc546dfcb.jpg"
                      data-width="1669" data-height="2101"
-                     onclick="openPainting(this);"
-                />
-
-
-                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/dac7fd62eda151e67c8d4c1beb9d0c02.jpg"
-                     alt="Marina Antón Moya" data-highres="img/paintings/dac7fd62eda151e67c8d4c1beb9d0c02.jpg"
-                     data-width="1132" data-height="1600"
                      onclick="openPainting(this);"
                 />
                 <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/4aa1d3fe8a8a2eb14f96655610bae5d7.jpg"
@@ -418,18 +406,23 @@
                      data-width="697" data-height="461"
                      onclick="openPainting(this);"
                 />
+                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/df8be3db489a37dab2874c16c0bca5ef.jpg"
+                     alt="Lucia Loza" data-highres="img/paintings/df8be3db489a37dab2874c16c0bca5ef.jpg"
+                     data-width="947" data-height="945"
+                     onclick="openPainting(this);"
+                />
             </div>
 
             <!-- 3rd column-->
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/12c80f5d86dafa0f01a4758063fd1150.jpg"
-                     alt="Lucia Loza" data-highres="img/paintings/12c80f5d86dafa0f01a4758063fd1150.jpg"
-                     data-width="1311" data-height="1766"
-                     onclick="openPainting(this);"
-                />
                 <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/e79b46a5b9cf644286a387364617e874.jpg"
                      alt="Lucia Loza" data-highres="img/paintings/e79b46a5b9cf644286a387364617e874.jpg"
                      data-width="441" data-height="653"
+                     onclick="openPainting(this);"
+                />
+                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/a035edd3af903a8d903cc7cb252801ba.jpg"
+                     alt="Francesca Albano" data-highres="img/paintings/a035edd3af903a8d903cc7cb252801ba.jpg"
+                     data-width="1200" data-height="1600"
                      onclick="openPainting(this);"
                 />
 
@@ -621,11 +614,7 @@
                      data-width="1511" data-height="1870"
                      onclick="openPainting(this);"
                 />
-                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/df8be3db489a37dab2874c16c0bca5ef.jpg"
-                     alt="Lucia Loza" data-highres="img/paintings/df8be3db489a37dab2874c16c0bca5ef.jpg"
-                     data-width="947" data-height="945"
-                     onclick="openPainting(this);"
-                />
+
             </div>
         </div>
 
@@ -637,13 +626,46 @@
         </div>
 
     </section>
-    <!--
     <section class="faq" id="faq">
         <div class="section-heading text-center mb-5">
             <h2>FAQ</h2>
             <hr>
         </div>
-    </section>-->
+        <div class="container">
+            <h4>Who can I contact if I want to speak directly with someone to collaborate or get info?</h4>
+            <p>Contact the team with this mail <a href="mailto:contact@bimble.cc">contact@bimble.cc</a>,
+                we’ll get back in touch asap!</p>
+
+            <h4>How can I upload my pictures on the site?</h4>
+            <p>You need to contact us via email and we’ll get them online.</p>
+
+            <h4>What type of artists can join Bimble?</h4>
+            <p>Any sort of visual art is welcomed in this platform like paintings, photographs, graffiti,
+                prints and we are open to creative alternative expressions of art.</p>
+
+            <h4>What sort of business can join?</h4>
+            <p>Bars, hotels, coffee shops, clothing stores, travel agencies, furniture,
+                decoration shops, galleries and others.</p>
+
+            <h4>How do I get to collaborate as an artists with a business space?</h4>
+            <p>Once you have your art in our site, we will find a space for you asap
+                and we’ll contact you with the great news!</p>
+
+            <h4>Who would buy the art on the walls?</h4>
+            <p>Clients entering in the business via online payment.</p>
+
+            <h4>How would the artist receive payment?</h4>
+            <p>The artist receives the payment online.</p>
+
+            <h4>How could the artist promote collaborations with the business?</h4>
+            <p>Artists and business could agree to organize events in the space,
+                this will help both the artists gaining visibility and the business.</p>
+
+            <h4>Why should I trust leaving my art in a shop?</h4>
+            <p>We will have a review system, selecting the business and artists that take part in the community.</p>
+
+        </div>
+    </section>
 
     <section class="team" id="team">
         <div class="section-heading text-center mb-5">
