--- a/index.html
+++ b/index.html
@@ -667,34 +667,34 @@
         </div>
     </section>
 
-    <section class="team" id="team">
-        <div class="section-heading text-center mb-5">
-            <h2>Team</h2>
-            <hr>
-        </div>
+<!--    <section class="team" id="team">-->
+<!--        <div class="section-heading text-center mb-5">-->
+<!--            <h2>Team</h2>-->
+<!--            <hr>-->
+<!--        </div>-->
 
-        <div class="d-flex flex-column flex-lg-row align-items-center">
-            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
-                <img class="team-img border border-grad-1 img-fluid rounded-circle mb-3" src="img/alba.jpg">
-                <h4>Alba Garcia</h4>
-                <p>Business Management</p>
-            </div>
+<!--        <div class="d-flex flex-column flex-lg-row align-items-center">-->
+<!--            <div class="team-card d-flex flex-column col-lg-4 align-items-center">-->
+<!--                <img class="team-img border border-grad-1 img-fluid rounded-circle mb-3" src="img/alba.jpg">-->
+<!--                <h4>Alba Garcia</h4>-->
+<!--                <p>Business Management</p>-->
+<!--            </div>-->
 
-            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
-                <img class="team-img border border-grad-2 img-fluid rounded-circle mb-3" src="img/fede.jpg">
-                <h4>Federico Terzi</h4>
-                <p>Software Engineer</p>
-            </div>
+<!--            <div class="team-card d-flex flex-column col-lg-4 align-items-center">-->
+<!--                <img class="team-img border border-grad-2 img-fluid rounded-circle mb-3" src="img/">-->
+<!--                <h4></h4>-->
+<!--                <p></p>-->
+<!--            </div>-->
 
-            <div class="team-card d-flex flex-column col-lg-4 align-items-center">
-                <img class="team-img border border-grad-3 img-fluid rounded-circle mb-3" src="img/pelle.jpg">
-                <h4>Matteo Pellegrino</h4>
-                <p>Software Engineer</p>
-            </div>
-        </div>
+<!--            <div class="team-card d-flex flex-column col-lg-4 align-items-center">-->
+<!--                <img class="team-img border border-grad-3 img-fluid rounded-circle mb-3" src="img/">-->
+<!--                <h4></h4>-->
+<!--                <p></p>-->
+<!--            </div>-->
+<!--        </div>-->
 
 
-    </section>
+<!--    </section>-->
 
     <img src="img/footer-curve.svg" id="footer-curve" class="w-100 m-0 img-fluid">
 
@@ -749,14 +749,11 @@
                             About us
                         </li>
                         <li>
-                            “We are a cohesively
-                            team, working on Bimble with love, passion and energy”
+                            “We work on Bimble with love, passion and energy”
                         </li>
                         <li class="text-right">
                             <br> -
-                            <a href="" target="_blank"><i>Alba</i></a>,
-                            <a href="https://github.com/federico-terzi" target="_blank"><i>Federico</i></a>,
-                            <a href="https://github.com/arabello" target="_blank"><i>Matteo</i></a>
+                            <a href="" target="_blank"><i>Alba</i></a>
                         </li>
                     </ul>
                 </div>
@@ -768,7 +765,6 @@
     <footer>
         <div class="container">
             <p>&copy; Bimble 2019. All Rights Reserved.</p>
-            <p class="external-copyright">©2017 Google LLC All rights reserved. Google and the Google Logo are registered trademarks of Google LLC</p>
             <ul class="list-inline">
 
                 <li class="list-inline-item">
