--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto ml-2" src="img/icon-business.svg">
                     <h4 class="pt-2">Show</h4>
-                    <p class="pt-2 pb-1 mb-auto">Exhibit art in your business for free</p>
+                    <p class="pt-2 pb-1 mb-auto">Exhibit art in your business and atract new customer</p>
                 </div>
             </div>
         </div>
