--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 </div>
                 <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto ml-2 pl-lg-4 pr-lg-1" src="img/icon-sell.svg">
-                    <h4 class="pt-2">Sell Art</h4>
-                    <p class="pt-2 pb-1 pl-lg-3 mb-auto">Clients will buy your art</p>
+                    <h4 class="pt-2">Exhibit Art</h4>
+                    <p class="pt-2 pb-1 pl-lg-3 mb-auto">Create an event to launch your exhibition</p>
                 </div>
             </div>
         </div>
