--- a/index.html
+++ b/index.html
@@ -179,16 +179,17 @@
                 <div class="hiw-step hiw-shape-3 col-12 col-lg-4 d-flex flex-column align-items-center text-center">
                     <img class="col-5 mt-auto ml-2" src="img/icon-business.svg">
                     <h4 class="pt-2">Show</h4>
-                    <p class="pt-2 pb-1 mb-auto">Exhibit art in your business           and attract new customer </p>                </div>
+                    <p class="pt-2 pb-1 mb-auto">Exhibit art and attract new customer </p>      
+                </div>
             </div>
         </div>
     </section>
 
     <section class="gallery" id="gallery"  data-aos="fade-in">
         <div class="section-heading text-center mb-5">
-            <a href="#"
+            <a href="mailto:bimble.bo@gmail.com"
                class="d-none d-lg-block mr-5
-               btn-upload-art-float btn btn-accent btn-shadow btn-icon btn-xl js-scroll-trigger">Upload your art</a>
+               btn-upload-art-float btn btn-accent btn-shadow btn-icon btn-xl js-scroll-trigger">Send us your art</a>
             <h2>Gallery</h2>
             <hr>
         </div>
