--- a/index.html
+++ b/index.html
@@ -201,8 +201,8 @@
 
             <!-- 1st column-->
             <div class="d-flex flex-column">
-                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/c2d42cc58af59f00a92478543876143f.jpg"
-                     alt="Lucia Loza" data-highres="img/paintings/c2d42cc58af59f00a92478543876143f.jpg"
+                <img class="gallery-img img-fluid image m-1" data-aos="fade-in" src="img/thumbnails/fioreblu"
+                     alt="Lucia Loza" data-highres="img/paintings/fioreblu.jpg"
                      data-width="2564" data-height="3362"
                      onclick="openPainting(this);"
                 />
